--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
+  margin: 50px auto;
+
+}
+
+.App .appborder {
+  border: 10px solid blueviolet;
+  border-radius: 5px 10px;
+  padding: 20px;
 }
