--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  
-  background: radial-gradient(328px at 2.9% 15%, rgb(191, 224, 251) 0%, rgb(232, 233, 251) 25.8%, rgb(252, 239, 250) 50.8%, rgb(234, 251, 251) 77.6%, rgb(240, 251, 244) 100.7%);
-
+    margin: 0;
+    background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/726/original/joe-woods-4Zaq5xY5M_c-unsplash.jpg?1673079563");
+    background-size: cover;
+    display: block;
+    padding: 180px 0;
+    background-position: top right, center right;
+    background-repeat: no-repeat;
 }
+
+
+
