--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 .App {
-  text-align: center;
   margin: 50px auto;
-
+  max-width: 85%;
 }
 
 .App .appborder {
-  border: 10px solid blueviolet;
-  border-radius: 5px 10px;
-  padding: 20px;
+  border: 5px solid #FFC106;
+  border-radius: 20px;
+  padding: 30px;
+}
+
+.App small {
+  display: block;
+  text-align: center;
+  padding-top: 5px;
 }
